--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -15,7 +15,7 @@
                         <mat-icon>view_list</mat-icon>
                         <span>Appointment List</span>
                     </a>
-                    <a mat-list-item routerLink="/admin/create_dept">
+                    <a mat-list-item routerLink="/admin/new_appointment">
                         <mat-icon>note_add</mat-icon>
                         <span>New Appointment</span>
                     </a>
