--- a/src/app/adminboard/appointment/appointment.component.html
+++ b/src/app/adminboard/appointment/appointment.component.html
@@ -5,12 +5,25 @@
     </ol>
 </nav>
 
-<div class="container d-flex justify-content-end mb-3">
 
+<!-- <div class="container d-flex justify-content-end mb-3">
     <div class="btn btn-primary">Add New Appointment</div>
+</div> -->
+<div class="d-flex align-items-end flex-column">
+    <div class="btn btn-primary mb-2">Add New Appointment</div>
+    <select class="form-select apt_table_option" #table (change)="onSelect(table.value)">
+        <option default value="all">All Appointments</option>
+        <option value="pending">Pending Appointments</option>
+        <option value="doctor">On Doctor's Review</option>
+        <option value="confirm">Confirmed Appointments</option>
+    </select>
 </div>
 
 
+<router-outlet></router-outlet>
+
+
+<!-- 
 
 <mat-tab-group>
     <mat-tab label="All Appointment">
@@ -22,8 +35,8 @@
 
     <mat-tab label="Pending Appointment">
         <ng-template matTabContent>
-        <app-pendingappointment></app-pendingappointment>
-    </ng-template>
+            <app-pendingappointment></app-pendingappointment>
+        </ng-template>
 
     </mat-tab>
 
@@ -41,4 +54,4 @@
     </mat-tab>
 
 
-</mat-tab-group>
+</mat-tab-group> -->
