--- a/src/app/adminboard/appointment/newappointment/newappointment.component.html
+++ b/src/app/adminboard/appointment/newappointment/newappointment.component.html
@@ -1,21 +1,37 @@
-<p>newappointment works!</p>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+    <li class="breadcrumb-item active" aria-current="page">New Appointment</li>
+  </ol>
+</nav>
+
+
+<div class="container d-flex justify-content-end mb-3">
+  <button class="btn btn-primary" routerLink="/admin/create_patient">Create Patient</button>
+</div>
+
+
+
 <div class="container">
-    <h1>Appointment Form</h1>
-    
-    
-    <form [formGroup]="appointForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
-      <div class="row">
-        <div class="form-group col">
-          <label for="uname">Your Registered Name:</label>
-          <input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example" disabled readonly>
-        </div>
-        <div class="form-group col">
-          <label for="uname">Your Patient ID:</label>
-          <input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example" disabled readonly>
-        </div>
+  <h1>Appointment Form</h1>
+
+
+  <form [formGroup]="appointForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+    method="POST">
+    <div class="row">
+      <div class="form-group col">
+        <label for="uname">Your Registered Name:</label>
+        <input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example"
+          disabled readonly>
       </div>
-    
-      <div class="row">
+      <div class="form-group col">
+        <label for="uname">Your Patient ID:</label>
+        <input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example"
+          disabled readonly>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="form-group col">
         <label for="uname">Appointment Type:</label>
         <select class="form-select" formControlName="appointment_type">
@@ -50,23 +66,32 @@
     </div>
     <div class="row">
       <div class="form-group col">
-        <label for="uname">Appoint Time:</label>
-        <select class="form-select" formControlName="appointment_time">
-          <option value="1">Morning</option>
-          <option value="2">Evening</option>
-        </select>
+        <div class="mb-2">
+          <label for="uname">Appoint Time:</label>
+          <select class="form-select" formControlName="appointment_time">
+            <option value="1">Morning</option>
+            <option value="2">Evening</option>
+          </select>
+        </div>
+        <div class="input-group">
+          <div class="input-group-text">
+            <input class="form-check-input mt-0" type="checkbox" value=""
+              aria-label="Checkbox for following text input">
+          </div>
+          <input type="text" class="form-control" aria-label="Text input with checkbox" disabled>
+        </div>
+
+
       </div>
       <div class="form-group col">
         <label for="">Desease Details</label>
         <textarea class="form-control" formControlName="deasease" rows="3"></textarea>
       </div>
     </div>
-    
-    <div class="d-flex justify-content-center"><button type="submit" class="btn btn-success float-right d-flex justify-content-center" id="btnLogin" (click)="appointment()">Create
-      Appointment</button></div>
-    
-    </form>
-    </div>
-    
-    
-    
+
+    <div class="d-flex justify-content-center"><button type="submit"
+        class="btn btn-success float-right d-flex justify-content-center" id="btnLogin" (click)="appointment()">Create
+        Appointment</button></div>
+
+  </form>
+</div>
