--- a/src/app/adminboard/billing/billing.component.html
+++ b/src/app/adminboard/billing/billing.component.html
@@ -1,1 +1,115 @@
-<p>billing works!</p>
+
+Billing comp
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Billing</li>
+    </ol>
+</nav>
+
+<div class="container">
+    <div class="">
+        <div class="">
+            <h3 class="text-center">Add New Doctor</h3><br>
+            <div class="text-center">
+                <!-- <img src="../../../../assets/images/doctor.jpg" alt="" class="rounded-circle"> -->
+            </div>
+
+
+            <form [formGroup]="billForm" method="POST" (ngSubmit)="createBill()">
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Patient ID:</label>
+                        <select class="form-select" formControlName="p_id">
+                            <!-- <option *ngFor="let dept of deptList" [ngValue]="dept.id">
+                                {{dept.dept_name}}
+                            </option> -->
+                        </select>
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Doctor Fee:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="doc_charge">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Medicine Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="medicine_charge">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Cabin Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="cabin_charge">
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Ambulance Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="ambulance_charge">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Operation Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="operation_charge">
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Lab Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="lab_charge">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">discount:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="discount">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Total Bill:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="total_bill">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Vat / Tax:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="vat_tax">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Paid Amount:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="paid">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Due Amount:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="due">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Put Your Picture:</label>
+                        <input class="form-control" type="file" name="" id="" formControlName="details">
+                    </div>
+                </div>
+
+
+
+                <br><br>
+
+                <div class="d-flex justify-content-center"><button type="submit"
+                        class="btn btn-success float-right d-flex justify-content-center" id="btnLogin"
+                        >New Bill</button>
+                </div>
+
+
+
+
+
+
+            </form>
+        </div>
+    </div>
