--- a/src/app/adminboard/employee/employee.component.html
+++ b/src/app/adminboard/employee/employee.component.html
@@ -1,1 +1,108 @@
-<p>employee works!</p>
+Billing comp
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Employee and Nurse</li>
+    </ol>
+</nav>
+
+<div class="container">
+    <div class="">
+        <div class="">
+            <h3 class="text-center">Add New Doctor</h3><br>
+            <div class="text-center">
+                <!-- <img src="../../../../assets/images/doctor.jpg" alt="" class="rounded-circle"> -->
+            </div>
+
+
+            <form [formGroup]="empForm" method="POST" (ngSubmit)="createEmp()">
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">First Name:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="emp_first_name">
+                    </div>
+
+                    <div class="form-group col">
+                        <label for="">Last Name:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="emp_last_name">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Date of Birth:</label>
+                        <input class="form-control" type="date" name="" id="" formControlName="emp_dob">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Cabin Charge:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="cabin_charge">
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Mobile No:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="emp_mobile">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Location:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="emp_address">
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Email:</label>
+                        <input class="form-control" type="text" name="" id="" formControlName="emp_email">
+                    </div>
+                    <div class="form-group col">
+                        <label for="">Join Date:</label>
+                        <input class="form-control" type="date" name="" id="" formControlName="emp_join_date">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col">
+                        <label for="">Employee Department/Role ID:</label>
+                        <select class="form-select" formControlName="ed_id">
+                            <!-- <option *ngFor="let dept of deptList" [ngValue]="dept.id">
+                                {{dept.dept_name}}
+                            </option> -->
+                        </select>
+                        <div class="form-group col">
+                            <label for="">Salary: </label>
+                            <input class="form-control" type="text" name="" id="" formControlName="emp_salary">
+                        </div>
+                    </div>
+                </div>
+
+                    <div class="row">
+                        <div class="form-group col">
+                            <label for="">Employee Picture:</label>
+                            <input class="form-control" type="file" name="" id="" formControlName="emp_picture">
+                        </div>
+                        <div class="form-group col">
+                            <label for="">Employee NID:</label>
+                            <input class="form-control" type="file" name="" id="" formControlName="emp_NID">
+                        </div>
+                    </div>
+
+
+
+                    <br><br>
+
+                    <div class="d-flex justify-content-center"><button type="submit"
+                            class="btn btn-success float-right d-flex justify-content-center" id="btnLogin">New
+                            Bill</button>
+                    </div>
+
+
+
+
+
+                
+            </form>
+        </div>
+    </div>
