--- a/src/app/adminboard/adminboard.component.css
+++ b/src/app/adminboard/adminboard.component.css
@@ -4,8 +4,20 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 
+.dash-icon{
+
+        font-size: 50px;
+        width: 50px;
+        height:50px;
+
+}
+
+.imgtest{
+    width: 40px;
+    height: 40px;
+}
 mat-sidenav {
-    width: 280px;
+    width: 22%;
     padding: 15px;
 }
 
@@ -23,10 +35,10 @@ mat-sidenav {
 }
 
 
-.test {
+/* .test {
     height: 50px;
     width: 50px;
-}
+} */
 
 
 
