--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -160,19 +160,8 @@
                 </mat-nav-list>
             </mat-expansion-panel>
 
+            
 
-
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                   
-                    Appointment
-                </mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="#">Spring</a>
-                    <a mat-list-item routerLink="#">Hibernate</a>
-                    <a mat-list-item routerLink="#">Struts</a>
-                </mat-nav-list>
-            </mat-expansion-panel>
         </mat-nav-list>
       left panel
     </mat-sidenav>
@@ -261,9 +250,8 @@
                 </button>
                
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <button ngbDropdownItem>Action - 1</button>
-                    <button ngbDropdownItem>Another Action</button>
-                    <button ngbDropdownItem>Something else is here</button>
+                    <button ngbDropdownItem>Profile</button>
+                    <button ngbDropdownItem>Log Out</button>
                 </div>
             </div>
 
