"About Page Working"

--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -46,13 +46,13 @@
             <a routerLink="/admin" class="nav-item nav-link">Amin Panel</a>
         </div>
         <!-- Button trigger modal -->
-        <a class="btn btn-primary btn-round btl" data-toggle="modal"
+        <a class="btn btn-outline-secondary btn-round btl" data-toggle="modal"
             data-target="#loginModal"> Login </a>
-        <a class="btn btn-primary btn-warning btl" data-toggle="modal"
+        <a class="btn btn-outline-secondary btl" data-toggle="modal"
             data-target="#signModal"> Signup </a>
-        <a class="btn btn-primary btn-warning btl" data-toggle="modal"
+        <a class="btn btn-outline-secondary btl" data-toggle="modal"
             data-target="#signModal"> Logout </a>
-        <a  routerLink="/patient" class="btn btn-primary btn-warning btl"
+        <a  routerLink="/patient" class="btn btn-outline-secondary btl"
             data-toggle="modal" data-target="#pmdnModal"> P log </a>
     </div>
 </nav>
