--- a/src/app/landingpage/header/header.component.css
+++ b/src/app/landingpage/header/header.component.css
@@ -1,20 +1,96 @@
 
+
+/* templave css navbar */
+/********** Template CSS **********/
+:root {
+  --primary: #355EFC;
+  --secondary: #E93C05;
+  --tertiary: #555555;
+  --light: #DFE4FD;
+  --dark: #011A41;
+}
+
+/*** Navbar ***/
+.fixed-top {
+  transition: .5s;
+}
+
+.top-bar {
+  height: 45px;
+  border-bottom: 1px solid rgba(53, 94, 252, .07);
+}
+
+.navbar .dropdown-toggle::after {
+  border: none;
+  content: "\f107";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  vertical-align: middle;
+  margin-left: 8px;
+}
+
+.navbar .navbar-nav .nav-link {
+  padding: 25px 15px;
+  color: var(--tertiary);
+  font-weight: 500;
+  outline: none;
+}
+
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active {
+  color: var(--primary);
+}
+
+@media (max-width: 991.98px) {
+  .navbar .navbar-nav {
+      margin-top: 10px;
+      border-top: 1px solid rgba(0, 0, 0, .07);
+      background: #FFFFFF;
+  }
+
+  .navbar .navbar-nav .nav-link {
+      padding: 10px 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar .nav-item .dropdown-menu {
+      display: block;
+      visibility: hidden;
+      top: 100%;
+      transform: rotateX(-75deg);
+      transform-origin: 0% 0%;
+      transition: .5s;
+      opacity: 0;
+  }
+
+  .navbar .nav-item:hover .dropdown-menu {
+      transform: rotateX(0deg);
+      visibility: visible;
+      transition: .5s;
+      opacity: 1;
+  }
+}
+
+
 /* ========================custom css================================ */
 .navbar
 {
-  background-color: rgba(255,255,0, 0.3);
+  background-color: none;
+  /* background-color: rgba(255,255,0, 0.3); */
 }
 
 .topnav{
   background-color: none;
   position: static;
-  /* z-index: 30; */
+  z-index: 30;
   width: 100%;
 }
 
 .my-nav {
     position: static;
-    /* z-index: 20; */
+    /* position: absolute; for trasperanet navbar */
+     z-index: 20;
     width: 100%;
     top: 5%;
 }
