--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,7 +1,7 @@
 
 
 <!-- Carousel Start -->
-<div class="container-fluid p-0 mb-1 wow fadeIn crrr" data-wow-delay="0.1">
+<div class="container-fluid p-0 mb-1 wow fadeIn" data-wow-delay="0.1">
     <div id="header-carousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -110,10 +110,10 @@
     <div class="container">
         <!-- Section Tittle -->
         <div class="row">
-            <div class="col-lg-12 wow zoomIn" data-wow-delay="0.1s">
+            <div class="col-lg-12 wow zoomIn m-3 p-5" data-wow-delay="0.1s">
                 <div class="section-tittle text-center mb-100">
-                    <span>Our Departments</span>
-                    <h2>Our Medical Services</h2>
+                    <span>Dedicated Departments</span>
+                    <h2 class="display-5 fw-bold">Our Medical Services</h2>
                 </div>
             </div>
         </div>
@@ -303,10 +303,10 @@
     <div class="container">
         <!-- Section Tittle -->
         <div class="row justify-content-center">
-            <div class="col-lg-6 wow zoomIn" data-wow-delay="0.1s">
+            <div class="col-lg-12 wow zoomIn m-3 p-5" data-wow-delay="0.1s">
                 <div class="section-tittle text-center mb-100">
-                    <span>Our Doctors</span>
-                    <h2>Our Specialist</h2>
+                    <span>Our Departments</span>
+                    <h2 class="display-5 fw-bold">Our Doctors and Specialists</h2>
                 </div>
             </div>
         </div>
@@ -374,15 +374,19 @@
 <!--? Blog start -->
 <div class="home_blog-area section-padding30">
     <div class="container">
-        <div class="row justify-content-sm-center wow zoomIn" data-wow-delay="0.1s">
-            <div class="cl-xl-7 col-lg-8 col-md-10">
-                <!-- Section Tittle -->
-                <div class="section-tittle text-center mb-70">
-                    <span>Oure recent news</span>
-                    <h2>OurNews From Blog</h2>
-                </div>
+
+
+        <div class="col-lg-12 wow zoomIn m-3 p-5" data-wow-delay="0.1s">
+            <div class="section-tittle text-center mb-100">
+                <span>Our recent news</span>
+                <h2 class="display-5 fw-bold">OurNews From Blog</h2>
             </div>
         </div>
+
+
+
+
+
         <div class="row wow zoomIn" data-wow-delay="0.1s">
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="single-blogs mb-30">
