--- a/src/app/adminboard/cabin/allcabinlist/allcabinlist.component.html
+++ b/src/app/adminboard/cabin/allcabinlist/allcabinlist.component.html
@@ -1,1 +1,122 @@
-<p>allcabinlist works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Cabin List and Status</li>
+    </ol>
+  </nav>
+  
+  
+  <div class="container d-flex justify-content-end mb-3">
+    <button class="btn btn-outline-secondary me-2" routerLink="/admin/create_patient">New Cabin Allotment</button>
+    <button class="btn btn-outline-secondary" routerLink="/admin/create_patient">Add New Cabin</button>
+  </div>
+  
+  
+  
+  <div class="container">
+    <h3 class="text-center">Cabin List And Status</h3>
+  
+    <div class="table-responsive mt-3">
+    <table id="table_id" class="display">
+        <thead>
+            <tr>
+                <th>Appointment id</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 3</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+            <tr>
+                <td>MinhJ</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
