--- a/src/app/landingpage/footer/footer.component.html
+++ b/src/app/landingpage/footer/footer.component.html
@@ -1,7 +1,7 @@
-<p>footer works!</p>
 
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-light py-5 wow fadeInUp" data-wow-delay="0.3s" style="margin-top: -75px;">
+<!-- <div class="container-fluid bg-dark text-light py-5 myfooter" data-wow-delay="0.3s" style="margin-top: -75px;"> -->
+<div class="container-fluid text-light bg-dark py-5 myfooter">
     <div class="container pt-5">
         <div class="row g-5 pt-4">
             <div class="col-lg-3 col-md-6">
