--- a/src/app/adminboard/cabin/cabincreate/cabincreate.component.html
+++ b/src/app/adminboard/cabin/cabincreate/cabincreate.component.html
@@ -1,1 +1,63 @@
-<p>cabincreate works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">New Cabin</li>
+    </ol>
+  </nav>
+  
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <h3>Add New Cabin Room</h3>
+        <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+          method="POST">
+          <div class="form-group">
+            <label for="">Floor:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_name">
+          </div>
+
+          <div class="form-group">
+            <label for="">Cabin Type:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
+          </div>
+
+          <div class="form-group">
+            <label for="">Cabin Fare:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
+          </div>
+          <br><br>
+  
+          <div class="d-flex justify-content-center"><button type="submit"
+              class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
+              >Create Cabin</button></div>
+  
+        </form>
+      </div>
+      <div class="col-8 h-25">
+        <table class="table table-bordered dept_table">
+          <thead>
+            <tr>
+              <th>Department ID</th>
+              <th>Department Name</th>
+              <th>Department Manager</th>
+              <th>Actions</th>
+  
+            </tr>
+          </thead>
+          <tbody>
+            <tr >
+              <td>dept.id </td>
+              <td>dept.dept_name</td>
+              <td>dept_manager</td>
+              <td>
+                <button class="btn btn-primary me-2">Edit</button>
+                <button class="btn btn-danger">Delete</button>
+              </td>
+            </tr>
+          </tbody>
+  
+        </table>
+      </div>
+    </div>
+  </div>
