--- a/src/app/adminboard/payments/payments.component.html
+++ b/src/app/adminboard/payments/payments.component.html
@@ -1,1 +1,160 @@
-<p>payments works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">New Appointment</li>
+    </ol>
+  </nav>
+  
+  
+  <div class="container d-flex justify-content-end mb-3">
+    <button class="btn btn-outline-info" routerLink="/admin/create_patient">Payment List</button>
+  </div>
+  
+  
+  
+  <div class="container">
+    <h1 class="text-center">Create New Payment</h1>
+  
+  
+    <form  class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+      method="POST">
+     
+  
+      <div class="row">
+        <div class="form-group col">
+          <label for="uname">Select Patient ID:</label>
+          <select class="form-select" formControlName="appointment_type">
+            <option value="1">P101</option>
+            <option value="2">P102</option>
+            <option value="3">P103</option>
+          </select>
+        </div>
+
+        <div class="form-group col">
+          <label for="uname">Patient Name:</label>
+          <input type="text" placeholder="Patient Name" class="form-control" disabled>
+         
+        </div>
+
+
+       
+
+        <!-- <div class="form-group col">
+          <label for="uname">Doctors Category:</label>
+          <select class="form-select" formControlName="department_id">
+            <option value="1">Medicine</option>
+            <option value="2">Orthopedics</option>
+            <option value="2">Surgon</option>
+            <option value="2">Skin</option>
+          </select>
+        </div> -->
+      </div>
+
+
+      <div class="row">
+        <!-- <div class="form-group col">
+          <label for="uname">Appointment Type:</label>
+          <select class="form-select" formControlName="appointment_type">
+            <option value="1">Emergency</option>
+            <option value="2">Casual</option>
+            <option value="3">Online</option>
+          </select>
+        </div> -->
+        <div class="form-group col">
+          <label for="uname">Doctors Category:</label>
+          <select class="form-select" formControlName="department_id">
+            <option value="1">Medicine</option>
+            <option value="2">Orthopedics</option>
+            <option value="2">Surgon</option>
+            <option value="2">Skin</option>
+          </select>
+        </div>
+
+        <div class="form-group col">
+            <label for="uname">Doctors Name:</label>
+            <select class="form-select" formControlName="doc_id">
+              <option value="1">Khalek</option>
+              <option value="1">Malek</option>
+              <option value="1">Rashed</option>
+            </select>
+          </div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="form-group col">
+          <label for="uname">Admission Date:</label>
+          <input type="date" class="form-control" formControlName="appointment_date">
+         
+        </div>
+        <div class="form-group col">
+          <label for="upass">Release Date:</label>
+          <input type="date" class="form-control" formControlName="appointment_date">
+        </div>
+      </div>
+
+      <div class="bg-secondary my-4 p-1">
+        <h3 class="text-white">All The Charges:</h3>
+      </div>
+      
+      <div class="row">
+        <div class="form-group col">
+          <label for="uname">Doctor Charges:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+         
+        </div>
+        <div class="form-group col">
+          <label for="upass">Ambulance Charge:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="form-group col">
+          <label for="uname">Cabin Charges:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+         
+        </div>
+        <div class="form-group col">
+          <label for="upass">Medicine Charge:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="form-group col">
+          <label for="uname">Testing Charges:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+         
+        </div>
+        <div class="form-group col">
+          <label for="upass">Operation Charge:</label>
+          <input type="text" class="form-control" formControlName="appointment_date">
+        </div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="form-group col">
+          <div class="mb-2">
+            <label for="uname">Discout:</label>
+            <input type="text" class="form-control" formControlName="appointment_date">
+          </div>
+
+        </div>
+        <div class="form-group col">
+          <label for="">Total Bill:</label>
+          <input type="text" placeholder="Total Bill" class="form-control" disabled>
+        </div>
+      </div>
+  
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-outline-success float-right d-flex justify-content-center m-2" id="btnLogin">Create Bill</button>
+        <button type="submit" class="btn btn-outline-info float-right d-flex justify-content-center m-2" id="btnLogin">Payment List</button>
+    </div>
+  
+    </form>
+  </div>
