--- a/src/app/adminboard/payments/paymentslist/paymentslist.component.html
+++ b/src/app/adminboard/payments/paymentslist/paymentslist.component.html
@@ -1,1 +1,130 @@
-<p>paymentslist works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Payments List:</li>
+    </ol>
+  </nav>
+  
+  
+  <!-- <div class="container d-flex justify-content-end mb-3">
+    <div class="btn btn-primary">Add New Appointment</div>
+  </div> -->
+  <div class="d-flex align-items-end flex-column">
+    <div class="btn btn-outline-primary mb-2">New Payments</div>
+   
+  </div>
+  
+  
+  <!-- This table is a Jquery Datatable plugin -->
+  
+  <!-- // this method if for data table
+  // tuts: https://webdamn.com/how-to-use-datatables-in-angular-8/
+  // https://datatables.net/examples/index
+  import { DataTablesModule } from 'angular-datatables'; -->
+  
+  <h3 class="text-center">All Payments</h3>
+  
+  <div class="table-responsive mt-3">
+  <table id="table_id" class="display">
+      <thead>
+          <tr>
+              <th>Appointment id</th>
+              <th>Name</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 3</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+          <tr>
+              <td>MinhJ</td>
+              <td>Row 2 Data 2</td>
+          </tr>
+      </tbody>
+  </table>
+  </div>
