--- a/src/app/adminboard/prescription/prescriptionlist/prescriptionlist.component.html
+++ b/src/app/adminboard/prescription/prescriptionlist/prescriptionlist.component.html
@@ -1,3 +1,20 @@
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Prescription List:</li>
+  </ol>
+</nav>
+
+
+<!-- <div class="container d-flex justify-content-end mb-3">
+  <div class="btn btn-primary">Add New Appointment</div>
+</div> -->
+<div class="d-flex align-items-end flex-column">
+  <div class="btn btn-outline-info mb-2">New Prescription</div>
+ 
+</div>
+
+
 <!-- This table is a Jquery Datatable plugin -->
 
 <!-- // this method if for data table
@@ -5,7 +22,7 @@
 // https://datatables.net/examples/index
 import { DataTablesModule } from 'angular-datatables'; -->
 
-<h3>Prescription List</h3>
+<h3 class="text-center">All Prescription</h3>
 
 <div class="table-responsive mt-3">
 <table id="table_id" class="display">
