--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -46,8 +46,7 @@
             <a routerLink="/admin" class="nav-item nav-link">Amin Panel</a>
         </div>
         <!-- Button trigger modal -->
-        <a class="btn btn-outline-secondary btn-round btl" data-toggle="modal"
-            data-target="#loginModal"> Login </a>
+        <a class="btn btn-outline-secondary btn-round btl" (click)="openLg(content)"> Login </a>
         <a class="btn btn-outline-secondary btl" data-toggle="modal"
             data-target="#signModal"> Signup </a>
         <a class="btn btn-outline-secondary btl" data-toggle="modal"
@@ -60,3 +59,51 @@
 
 
 <!-- ==================modal=============start-============= -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+	<div class="modal-header">
+		<h4 class="modal-title text-center" id="modal-basic-title">Member's Login</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+        
+        <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+          method="POST">
+
+          <div class="image">
+            <img src="https://w7.pngwing.com/pngs/831/88/png-transparent-user-profile-computer-icons-user-interface-mystique-miscellaneous-user-interface-design-smile-thumbnail.png" alt="" class="img-fluid" width="80">
+        </div>
+
+
+
+
+          <div class="form-group">
+            <label for="">Floor:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_name">
+          </div>
+
+          <div class="form-group">
+            <label for="">Cabin Type:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
+          </div>
+
+          <div class="form-group">
+            <label for="">Cabin Fare:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
+          </div>
+          <br><br>
+  
+          <div class="d-flex justify-content-center"><button type="submit"
+              class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
+              >Create Cabin</button></div>
+  
+        </form>
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+	</div>
+</ng-template>
+
+<button class="btn btn-lg btn-outline-primary" (click)="openLg(content)">Launch demo modal</button>
+
+
